# brain-tumor-segmentation

./: CMakeLists.txt
.ipynb_checkpoints/: README-checkpoint.md  segmentation-checkpoint.py
BrainTumorSegmentation/: BrainTumorSegmentation.py
BrainTumorSegmentation/.ipynb_checkpoints/: BrainTumorSegmentation-checkpoint.py
BrainTumorSegmentation/Resources/UI/: BrainTumorSegmentation.ui
